--- a/LineServiceWeb/Web.config
+++ b/LineServiceWeb/Web.config
@@ -15,7 +15,12 @@
   <appSettings></appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.6.1" />
+    <compilation debug="true" targetFramework="4.6.1">
+      <assemblies>
+        <!--for Apphar build error-->
+        <add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
   <system.webServer>
