--- a/LineServiceWeb/Web.config
+++ b/LineServiceWeb/Web.config
@@ -18,6 +18,7 @@
       <assemblies>
         <!--for Apphar build error-->
         <add assembly="System.Collections, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+        <add assembly="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed"/>
       </assemblies>
     </compilation>
     <httpRuntime targetFramework="4.6.1" />
